Fix glitch where global nav breaks when widget font-size is too large (remove padding)

--- a/profiles/ug/themes/ug/ug_cornerstone/css/ug2015-v1.css
+++ b/profiles/ug/themes/ug/ug_cornerstone/css/ug2015-v1.css
@@ -133,11 +133,12 @@ Live Date: June 23, 2015
 
 	    /*--- Theming ---*/
 
-	    #ug-header .navbar-small {
-	        font-size: .857em;
-	    }
-
 	    @media all and (min-width: 768px){
+			#ug-header .navbar-small {
+				font-size: .857em;
+		        padding: 0;
+			}
+
 		    #ug-header .navbar-small li a:focus,
 		    #ug-header .navbar-small li a:hover {
 		    	background: #990100;
